# django-fsm-sample

./: pyproject.toml
djangofsm/: 0.4  db.sqlite3  manage.py
djangofsm/blogpost/: admin.py  apps.py  models.py
djangofsm/blogpost/api/v1/: serializers.py  urls.py  viewsets.py
djangofsm/blogpost/migrations/: 0001_initial.py  0002_alter_blogpost_state.py
djangofsm/djangofsm/: asgi.py  settings.py  urls.py  wsgi.py
